FDN-1753: Upgrade to java 17 (#540)
* upgrade to java 17
* set jenv version

---------

Co-authored-by: Himanshu Upadhyay <x_hupadhyay@flow.io>